# MINECORG

./: .gitignore  LICENSE.md  README.md  pyproject.toml
minecorg/: cli.py
minecorg/classes/: entity.py
minecorg/commands/: create_mod.py  entity.py  project.py  scan.py
minecorg/templates/: entity.entity.json  entity.json  entity.render_controllers.json  folder_structure.json  package.json  script_template.py
minecorg/utils/: file_utils.py  json_handler.py
