[tool.poetry]
name = "minecorg"
version = "0.1.0"
description = ""
authors = ["Caetano Passos"]
readme = "README.md"
packages = [{include = "minecorg"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
minecorg = "minecorg.cli:cli"
