[tool.poetry]
name = "minecorg"
version = "0.1.0"
description = ""
authors = ["Caetano Passos"]
readme = "README.md"
packages = [{include = "minecorg"},
{ include = "minecorg/templates", format = "sdist" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
minecorg = "minecorg.cli:cli"

[tool.setuptools.packages.find]
where = ["minecorg"]

[tool.setuptools.package-data]
minecorg = ["templates/*"]