[tool.poetry]
name = "minecorg"
version = "0.1.0"
description = ""
authors = ["Caetano Passos"]
readme = "README.md"
packages = [{include = "minecorg"},
{ include = "minecorg/templates", format = "sdist" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
minecorg = "minecorg.cli:cli"

[project]
name = "minecorg"
version = "0.0.1"
authors = [
  { name="Caetano Passos", email="" },
]
description = "minecraft mod organizer"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE.md"]

[project.urls]
Homepage = "https://github.com/CaetanoP/MINECORG"
